--- a/src/styles/MessageSection.css
+++ b/src/styles/MessageSection.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    background: radial-gradient(ellipse at 50% 50%, rgba(129, 141, 235, 1) 2%, rgba(217, 138, 211, 1) 45%, rgba(229, 7, 229, 1) 90%);
   }
   
   .romantic-message {
@@ -24,6 +26,27 @@
   
   p {
     font-size: 1.2rem;
+  }
+
+  .yes-button {
+    background-color: #ff69b4;
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+    padding-bottom: 20px;
+  }
+  
+  .yes-button:hover {
+    transform: scale(1.05);
+  }
+  
+  .yes-button:active {
+    transform: scale(0.98);
   }
   
   /* Animation for message */
